<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/lblAmount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="586dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top">

            <TextView
                android:id="@+id/textView"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/amtPaidEnough" />

            <RadioButton
                android:id="@+id/rgpYes"
                android:layout_width="80dp"
                android:layout_height="66dp"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rgpNo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/No" />
        </RadioGroup>

        <TextView
            android:id="@+id/lblReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regLabel"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCon"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/toPay" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>